[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "LCBML"
dynamic = ["version"]
description = "The description of your package"
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.7"
keywords = []
authors = [
  {name = "Bastien Mollet", email = "bastien.mollet@inrae.fr"},
]
maintainers = [{name = "Bastien Mollet", email = "bastien.mollet@inrae.fr"},]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
]
dependencies = ["numpy",]
